welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:3: error: type mismatch;
 found   : String("decalage")
 required: Int
val "decalage" = litMessage().toInt
    ^